# bananabread

./: README.md  ai_iteration_pattern.md  data_unit.json  example_requirement.md  find_attr.py  find_attrib_stack.py  find_attributes.py  find_common_attrib.py  find_common_parent_attribute_values.py  find_parent_attrib.py  get_page_structure.py  output.json  pyproject.toml  webpage_content.json
banana/: common_parent_attributes.json  data_unit.json  webpage_content.json
notes/: ai_iteration_pattern.md  bananabread.md
notes/function_calls/: LLM_function_calls.md
notes/function_calls/examples/: example_location.json  example_weather.json  vanilla.py
old/: find_attributes.py  find_common_attrib.py  find_common_parent_attribute_values.py  find_parent_attrib.py
test/: test_get_page_structure.py  webpage_content.json
